Adicionando funcionalidades: Desafios em Equipe; Quiz Mito ou Verdade?; Comunidades Anônimas e seguras; Termômetro de Emoções (Check-in Diário); Ferramentas de Alívio de Estresse; Health Score Dinâmico
